<resources>
    <string name="app_name">client</string>
    <string name="foursquare_client_id">XCVWHEE4CR51K5UHTEOW1KUU4QT3RKBRZLQMG1ZN0APZPWVR</string>
    <string name="foursquare_client_secret">TJNGAOBUDM1ILMOZJZ5Y02LWJS5SM3QGO55HJMNBEXIYKK0W</string>
    <string name="contentDescription">Building</string>
    <string name="search_text">Search</string>
    <string name="filter_text">Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="filter_by">Filter By</string>
    <string name="search_there">Search there</string>
    
    <string name="price_1">$</string>
    <string name="price_2">$$</string>
    <string name="price_3">$$$</string>
    <string name="price_4">$$$$</string>
    <string name="distance">Distance</string>
    <string name="relevance">Relevance</string>
    <string name="select_place_and_radius">Select Place And Radius</string>
    <string name="map_Key">AIzaSyDMofTdX08zRW6ldhaPiCPhA6tz5dz_PVQ</string>
    <string name="google_map">Google map</string>
    <string name="selected_place">selected place</string>
    <string name="testtext">testText</string>
    <string name="gallery">gallery</string>
    <string name="photouser">photoUser</string>
    <string name="like">like</string>
    <string name="reset">reset</string>
    <string name="radius_min">0.5km</string>
    <string name="radius_max">100km</string>
</resources>
